Updated race powers

--- a/centaur.html
+++ b/centaur.html
@@ -16,6 +16,7 @@
         <li><a href="centaur.html">Centaur</a></li>
         <li><a href="elken.html">Elken</a></li>
         <li><a href="fae.html">Fae</a></li>
+        <li><a href="guinecean.html">Guinecean</a></li>
         <li><a href="halfelf.html">Half Elf</a></li>
         <li><a href="halfgiant.html">Half Giant</a></li>
         <li><a href="highelf.html">High Elf</a></li>
