--- a/guinecean.html
+++ b/guinecean.html
@@ -46,125 +46,18 @@
         <div class="race-disciplines"><h2>Race Disciplines</h2></div>
         <div class="race-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            S<br>
-            S            
+            Agent Provocateur<br>
+            Paragon            
             <h3><a href="#minors">Minors</a></h3>
-            P<br>
-            T           
+            Glass Cannon<br>
+            Tunnel           
         </div>
     </div>           
 
     <h1 class="sub-header" id="race-powers">Race Powers</h1>
 
-    <section>
-        <div class="container-race-powers">        
-            <div class="header-race-powers">
-                <div>
-                    <h2 id="wild-charge">Wild Charge</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Disc_WildCharge.png">
-                </div>                           
-            </div>
-            <div class="race-powers-cooldown-info">
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>23 S</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Rectangle</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div>5 M</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                    <div>Instant</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Duration.png">
-                    <div>15 S</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Restore.png">
-                    <div></div>
-                </div>
-            </div>    
-                <p class="info">Charges you forward 15M dealing 119 damage to enemies in your path. 
-                    Wild Charge applies an Armor Tear to all hit, wich reduces all Final Physical 
-                    Mitigation by 10% for 15 seconds.<br><br>
-                    Enemies may be pushed back depending on how close you are to them when you initiate 
-                    the charge.
-                </p>        
-        </div>
-        <div class="container-race-powers">        
-            <div class="header-race-powers">
-                <div>
-                    <h2 id="rear-kick">Rear Kick</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Cntr_RearKick.png">
-                </div>                           
-            </div>
-            <div class="race-powers-cooldown-info">
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>30 S</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Behind Caster</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                    <div>Instant</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Duration.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div>5 M</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Restore.png">
-                    <div></div>
-                </div>
-            </div>    
-                <p class="info">Kicks behind you inflicting Knockdown and causing 94 damage.
-                </p>        
-        </div>
+    <section>               
+        
     </section>
 
     <h1 class="sub-header">Disciplines</h1>
@@ -174,31 +67,30 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="dryad">Dryad</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_Dryad.png">
+                    <h2 id="dryad">Agent Provocateur</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_AgentProvocateur.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Elken, Nature</p>
+                    <p>Trait: Guinecean, Shadow</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Healing Bonus: +3%</p>
-                    <p>Support Power: +100</p>
+                    <p>Movement Speed Damage Bonus: +5%</p>
+                    <p>Movement Speed: Stealth: +5%</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Blast Of Leaves</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_BlastOfLeaves.png">
-                            <p>Blasts Leaves healing allies in front of you for 188 Health 16 times over 8
-                                seconds while you channel.
+                            <h3>Caltrops</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Caltrops.png">
+                            <p>Covers the targeted area with caltrops for 15 seconds, reducing Piercing Mitigation
+                                by 20% and Slowing.
                             </p>
                         </div>
                         <div>
-                            <h3>Nature's Avatar</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>Empowers an ally, increasing their Damage Bonus, Critical Strike, Critical Damage
-                                and Personal Damage Modifier by 20% and Power Damage Bonus: Melee by 0% while you
-                                channel. 
+                            <h3>Lay Low</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_LayLow.png">
+                            <p>Tends to your wounds, and recover 375 maximum Health up to 6 times over
+                                15 seconds as long as Stealth is maintained. 
                             </p>
                         </div>                                       
                 </div>                                            
@@ -207,33 +99,32 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="sun-worshiper">Sun Worshiper</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_SunWorshiper.png">
+                    <h2 id="paragon">Paragon</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_Paragon.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Light, Fire</p>
+                    <p>Trait: Frostweaver, Guinecean, Justice, Battle</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Elemental Resictance: +300</p>
-                    <p>Support Power: +100</p>
+                    <p>Anti Critical Strike: +3%</p>
+                    <p>Health: +500</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Chain Heal</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_ChainHeal.png">
-                            <p>Heals a targeted ally for 111 Health and then chains to an additional nearby
-                                ally that is 30% less effective.
+                            <h3>Rehabilitation</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Rehabilitation.png">
+                            <p>Tends to your wounds healing for 500 three times over six seconds. This ability
+                                does not scale with support power.
                             </p>
                         </div>
                         <div>
-                            <h3>Cleanse</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Purgative.png">
-                            <p>Removes all Bleeds, Diseases, Damnation, Poisons and Aura Emitters from your
-                                group members and gives a short Immunity to those removed. Increses your Bleed
-                                Resictances by 2000 for 12 seconds.
+                            <h3>Vengeful Aura</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Cleric_VengefulAura.png">
+                            <p>Fortifies group members and you with otherworldly strenght increasing their Attack
+                                Power by 75 while you maintain the effect.
                             </p>
-                        </div>                                         
+                        </div>                                       
                 </div>                                            
             </div>                                               
         </div>
@@ -245,22 +136,22 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="pack-avatar">Pack Avatar</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_PackAvatar.png">
+                    <h2 id="glass-cannon">Glass Cannon</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_GlassCannon.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Elken</p>
+                    <p>Trait: Guinecean, Shadow, Fire, Storm</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Health: +500</p>                    
+                    <p>Critical Strike: +2%</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Pack Avatar</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Drud_PackAvatar.png">                        
-                        <p>Empowers your group, increasing Damage Bonus and Critical Strike by 10% for
-                            20 seconds.
+                        <h3>Glass Cannon</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_GlassCannon.png">                        
+                        <p>Increases your Damage Bonus by 10% while also increasing the damage you take
+                            by 10%.
                         </p>
                     </div>               
                 </div>
@@ -269,22 +160,24 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="toughness">Toughness</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Toughness.png">
+                    <h2 id="tunnel">Tunnel</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Tunnel">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Templar, Centaur, Fire, Light, Music</p>
+                    <p>Trait: Guinecean</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Physical Resistance: +300</p>                    
+                    <p>Stealth: +15</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Toughness</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Toughness.png">                        
-                        <p>Strengthens group members and you increasing their Maximum Health by 1500
-                            for 45 seconds.
+                        <h3>Tunnel</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Duel_Tunnel.png">                        
+                        <p>Excavates a path directly ahead of you, ignoring walls and some types of objects
+                            in your path.<br><br>
+                            You cannot perform a successful Tunnel if it will place you inside a Building
+                            or Rock.
                         </p>
                     </div>               
                 </div>
