--- a/nethari.html
+++ b/nethari.html
@@ -46,14 +46,11 @@
         <div class="race-disciplines"><h2>Race Disciplines</h2></div>
         <div class="race-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            C<br>
-            F<br>
-            S<br>
-            T            
+            Holy Avenger<br>
+            Militant Mage            
             <h3><a href="#minors">Minors</a></h3>
-            G<br>
-            S<br>
-            U            
+            Blood Pact<br>
+            Marked For Death            
         </div>
     </div>           
 
@@ -63,14 +60,14 @@
         <div class="container-race-powers">        
             <div class="header-race-powers">
                 <div>
-                    <h2 id="candle-that-burns">Candle That Burns</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Disc_CandleThatBurns.png">
+                    <h2 id="call-flames">Call Flames</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Disc_CallFlames.png">
                 </div>                           
             </div>
             <div class="race-powers-cooldown-info">
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>47 S</div>
+                    <div>45 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Lifetime.png">
@@ -78,7 +75,7 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div></div>
+                    <div>5</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Target.png">
@@ -86,7 +83,7 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div></div>
+                    <div>8 M</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_CastTime.png">
@@ -98,7 +95,7 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div>Resource</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Range.png">
@@ -109,8 +106,10 @@
                     <div></div>
                 </div>
             </div>    
-                <p class="info">Increases your Damage Bonus by 10% while also making your powers more
-                    costly by 5% for 30 seconds.
+                <p class="info">Increases your Damage Bonus: Fire by 10 for 30 seconds, resets your 
+                    Dodge cooldown and applies a Burning damage over time effect to up to 5 enemies 
+                    within 8 meters.<br><br>
+                    Burning causes 76 Fire damage every two seconds for 16 seconds.
                 </p>        
         </div>        
     </section>
@@ -122,30 +121,29 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="cloisterer">Cloisterer</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_Cloisterer.png">
+                    <h2 id="holy-avenger">Holy Avenger</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_HolyAvenger.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Confessor, Templar, Human, Light</p>
+                    <p>Trait: Nethari, Fire, Protection</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Healing Bonus: +3%</p>
-                    <p>Health: +500</p>
+                    <p>Armor Penetration: Fire +2%</p>
+                    <p>Holy Damage Bonus: +2%</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Benediction</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Benediction.png">
-                            <p>Blesses group members within 50M and you increasing Organic Resistance by 2500, Bleed
-                                Resistance by 2500 and Cooldown Reduction: Long by 10% for 30 seconds.
+                            <h3>Battle Chant</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_BattleChant.png">
+                            <p>Summons spinning hammers lasting 15 seconds to damage nearby enemies for
+                                76 damage.
                             </p>
                         </div>
                         <div>
-                            <h3>Spite</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Spite.png">
-                            <p>Recovers 187 Health every 2 seconds over 4 seconds each time you suffer a 
-                                Knockdown, Stun, Blind or Suppress.</p>
+                            <h3>Suns Of Worvan</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_SunsOfWorvan.png">
+                            <p>Applies a Fire damage immune Barrier for 15 seconds.</p>
                         </div>                                       
                 </div>                                            
             </div>                                               
@@ -153,105 +151,36 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="freedom-fighter">Freedom Fighter</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_FreedomFighter.png">
+                    <h2 id="militant-mage">Militant Mage</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_MilitantMage.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Human, Nature, Wind</p>
+                    <p>Trait: Nethari, Protection, Justice</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
                     <p>Health: +500</p>
-                    <p>Stamina: +10</p>
+                    <p>Physical Resistance: +300</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Free Action</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_FreeAction.png">
-                            <p>Liberates group members and yourself gaining immunity to Crowd Control effects
-                                for 9 seconds.<br><br>
-                                This attack can be instantly Flash-Cast.<br><br>
-                                This effect can only be applied to each target once every 30 seconds.
+                            <h3>Warp Weapons</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_WarpMetal.png">
+                            <p>Curses an enemy with a destructive aura decreasing their Attack Power by 1%
+                                for 15 seconds for each attack they commit while active.
                             </p>
                         </div>
                         <div>
-                            <h3>Purify</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Purgative.png">
-                            <p>Removes and grants a short immunity to Blackmantle, Frostbite, Pulsing Damage
-                                Aura, Disease. Increses your Physical Resictances by 1000 for 12 seconds.
+                            <h3>Sword Ward</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_SwordWard.png">
+                            <p>Enchants your armor with a ward against Slashing attacks increasing your 
+                                Slashing Resistance by 500 each time you are hit. Stacks up to 5 times.
                             </p>
                         </div>                                         
                 </div>                                            
             </div>                                               
         </div>
-        <div class="container-major">        
-            <div class="header-major">
-                <div>
-                    <h2 id="standard-bearer">Standard Bearer</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_StandardBearer.png">
-                </div>
-                <div>
-                    <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Half Elf, Human, Justice</p>
-                    <p>Slot: Major</p>
-                    <h2 id="statistics">Statistics</h2>
-                    <p>Anti-Critical Strike: +3%</p>
-                    <p>Health: +500</p>
-                    <h2>Discipline</h2>
-                    <h6>Powers Granted</h6>
-                        <div>
-                            <h3>Rallying Banner</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_RallyingBanner.png">
-                            <p>Fortifies allies with a banner increasing Attack Power by 100, healing those
-                                under 35% Health for 49 health per second and removing slow effects.
-                            </p>
-                        </div>
-                        <div>
-                            <h3>Sentinel</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_CarefulAim.png">
-                            <p>Improves your Personal Damage Modifier reducing damage by 5% while standing still.
-                            </p>
-                        </div>                                         
-                </div>                                            
-            </div>                                               
-        </div>
-        <div class="container-major">        
-            <div class="header-major">
-                <div>
-                    <h2 id="thorny-warrior">Thorny Warrior</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_ThornyWarrior.png">
-                </div>
-                <div>
-                    <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Ranger, Human</p>
-                    <p>Slot: Major</p>
-                    <h2 id="statistics">Statistics</h2>
-                    <p>Armor Penetration: Piercing: +2%</p>
-                    <p>Armor Penetration: Slashing: +2%</p>
-                    <h2>Discipline</h2>
-                    <h6>Powers Granted</h6>
-                        <div>
-                            <h3>Dagger Spin</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Rngr_DaggerSpin.png">
-                            <img src="images/Powers/Icon_Powers_Graphic_Rngr_DaggerSpin.png">
-                            <img src="images/Powers/Icon_Powers_Graphic_Rngr_DaggerSpin.png">
-                            <img src="images/Powers/Icon_Powers_Graphic_Rngr_DaggerSpin.png">
-                            <p>Spins you in place and deal 93 damage around you and applies a Bleed to
-                                nearby targets.<br><br>
-                                Bleeding causes 70 Bleed damage every two seconds for 16 seconds. Can
-                                be used up to 4 times. 
-                            </p>
-                        </div>
-                        <div>
-                            <h3>Root Stake</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_GraspingRoots.png">
-                            <p>Creates a field Rooting any enemies in it every 5 seconds for 15 seconds as long
-                                as they remain near the stake.
-                            </p>
-                        </div>                 
-                </div>
-            </div>    
-        </div>
+        
     </section>
 
     <h1 class="sub-header" id="minors">Minors</h1>
@@ -260,22 +189,24 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="guardian-rhythms">Guardian Rhythms</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_GuardianRhythms.png">
+                    <h2 id="blood-pact">Blood Pact</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_BloodPact.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Human, Music</p>
+                    <p>Trait: Nethari, War, Death</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Song Duration: +2</p>                    
+                    <p>Health: +500</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Guardian Rhythms</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Disc_GuardianRythmns.png">                        
-                        <p>Reduces the group's Damage Taken by 5% for 12 seconds. Refreshes every 6 seconds
-                            while toggled on.
+                        <h3>Blood Pact</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_BloodPact.png">                        
+                        <p>Grants a Blood Pact for 15 seconds, causing powers to consume Health in
+                            place of their specified Recource.<br><br>
+                            The Health conversion only works for main power bar abilities, this 
+                            excludes Basic Attacks, Dodge, Retaliate and Ultimates.
                         </p>
                     </div>               
                 </div>
@@ -284,50 +215,26 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="sparring">Sparring</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Sparring.png">
+                    <h2 id="marked-for-death">Marked For Death</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_MarkedForDeath.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Assassin, Duelist, Half Giant, Human, War, Battle, Death</p>
+                    <p>Trait: Nethari, Shadow, War, Battle</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Critical Strike: +2%</p>                    
+                    <p>Critical Damage: +5%</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Sparring</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Sparring.png">                        
-                        <p>Increases your basic attack damage by 10%.
+                        <h3>Marked For Death</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_PinCushion.png">                        
+                        <p>Places a mark on your target, you and your group members deal additional weapon
+                            damage to the target when you hit it for 20 seconds.
                         </p>                          
                     </div>               
                 </div>
             </div>    
-        </div>
-        <div class="container-major">        
-            <div class="header-major">
-                <div>
-                    <h2 id="underdog">Underdog</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Underdog.png">
-                </div>
-                <div>
-                    <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Myrmidon, Human, War, Death</p>
-                    <p>Slot: Minor</p>
-                    <h2 id="statistics">Statistics</h2>
-                    <p>Slashing Damage Bonus: +2%</p>                    
-                    <h2>Discipline</h2>
-                    <h6>Powers Granted</h6>
-                    <div>
-                        <h3>Underdog</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Underdog.png">                        
-                        <p>Comes back even stronger after suffering a Knockdown or Stun with your Attack
-                            Power increasing by 100 for 30 seconds.<br><br>
-                            This effect can stack with itself.
-                        </p>                           
-                    </div>               
-                </div>
-            </div>    
-        </div>
+        </div>        
     </section>
 </body>
